--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "animejs": "^3.1.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "dd-trace": "^0.18.0",
     "emailjs-com": "^2.4.0",
     "react": "^16.9.0",
     "react-compound-timer": "^1.1.9",
     "react-dom": "^16.9.0",
     "react-reveal": "^1.2.2",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.4.0",
     "react-slick": "^0.25.2",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^5.4.0",
