--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@datadog/browser-logs": "^1.5.0",
+    "@datadog/browser.logs": "^1.5.0",
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
     "animejs": "^3.1.0",
