--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@datadog/browser.logs": "^1.5.0",
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
+    "acorn": "^7.1.1",
     "animejs": "^3.1.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
