--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.3.1",
     "dd-trace": "^0.18.0",
     "emailjs-com": "^2.4.0",
+    "kind-of": "^6.0.3",
     "minimist": "^1.2.5",
     "react": "^16.9.0",
     "react-compound-timer": "^1.1.9",
